updating our details

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
+      <p>im a student ...</p>
+      <h1>Los Angeles,California</h1>
       <p>Details here...</p>
-      <h1>Where I'm From</h1>
+      <h1>playing basketball and hiking</h1>
       <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
+      <h1>software engineer at google</h1>
       <p>Details here...</p>
-      <h1>What's your dream job?</h1>
+      <h1>Pfluferville,Tx</h1>
       <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
+      <h1>because it has always been my dream job</h1>
       <p>Details here...</p>
     </section>
 
