updating our details

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>im a student ...</p>
-      <h1>Los Angeles,California</h1>
-      <p>Details here...</p>
-      <h1>playing basketball and hiking</h1>
-      <p>Details here...</p>
-      <h1>software engineer at google</h1>
-      <p>Details here...</p>
-      <h1>Pfluferville,Tx</h1>
-      <p>Details here...</p>
-      <h1>because it has always been my dream job</h1>
-      <p>Details here...</p>
+      <h1>Where I'm From</h1>
+      <p>Los Angeles, California</p>
+      <h1>What are your favorite hobbies?</h1>
+      <p>playing basketball hiking</p>
+      <h1>What's your dream job?</h1>
+      <p>web developer at google</p>
+      <h1>Where do you live?</h1>
+      <p>Pflugerville, Tx</p>
+      <h1>Why do you want to be a web developer?</h1>
+      <p>It has always been my dream job</p>
     </section>
 
     <footer id="footer">
